--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Home</h1>
+    <p><a href="https://github.com/GuildOfCalamity/TodoWebApp">My github source repo for TodoWebApp</a></p>
     <p><a href="https://learn.microsoft.com/aspnet/core">Learn about building Web apps with ASP.NET Core</a></p>
 </div>
