--- a/Views/TodoItems/Index.cshtml
+++ b/Views/TodoItems/Index.cshtml
@@ -7,11 +7,10 @@
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <h1 class="m-0">@ViewData["Title"]</h1>
-    <img src="~/images/favicon.png"
-         alt="Logo"
-         style="height:60px; width:auto;"
-         asp-append-version="true" />
+    <h1 class="m-0 opacity-50">@ViewData["Title"]</h1>
+    <span class="pe-5 opacity-75 fs-4 text-lightblue-bottom">@ViewData["StatusMessage"]</span>
+    <img src="~/images/favicon.png" alt="Logo" style="height:48px; width:auto;" asp-append-version="true" />
+    @* <img src="~/images/checkFader.gif" alt="Logo" style="height:32px; width:auto;" asp-append-version="true" /> *@
 </div>
 
 <p><a asp-action="Create" class="btn btn-primary">Add New</a></p>
@@ -46,27 +45,38 @@
                     }
                 </a>
             </th>
-            <th></th>
+            <th>Options</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td><input type="checkbox" asp-for="@item.IsDone" disabled /></td>
-                <td>
+                <td class="pe-0 align-middle"><input type="checkbox" asp-for="@item.IsDone" class="form-check-input checkbox-lg" disabled /></td>
+                <td class="pe-0 align-middle">
+                    @*                  
                     <a asp-action="Edit" asp-route-id="@item.Id">@item.Title</a>
-                    @* If we have a due date and it’s before today show a warning symbol *@
                     @if (item.DueDate.HasValue && item.DueDate.Value.Date < DateTime.Today && !item.IsDone)
                     {
                         <span class="text-warning fs-5" title="Item is past due">&#9888;</span>
-                    }
+                    } 
+                    *@
+                    <span class="has-tooltip"
+                          data-bs-toggle="tooltip"
+                          data-bs-html="true"
+                          title="@item.Details.Replace("\n", "<br/>")">
+                        <a asp-action="Edit" asp-route-id="@item.Id">@item.Title</a>
+                        @if (item.DueDate.HasValue && item.DueDate.Value.Date < DateTime.Today && !item.IsDone)
+                        {
+                            <span class="text-warning fs-5" title="Item is past due">&#9888;</span>
+                        }
+                    </span>
                 </td>
-                <td>@item.EntryDate?.ToShortDateString()</td>
-                <td>@item.DueDate?.ToShortDateString()</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <td class="pe-0 align-middle">@item.EntryDate?.ToShortDateString()</td>
+                <td class="pe-0 align-middle">@item.DueDate?.ToShortDateString()</td>
+                <td class="pe-0 align-middle">
+                    @* <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> | <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
