--- a/Views/TodoItems/Edit.cshtml
+++ b/Views/TodoItems/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <h1 class="m-0">@ViewData["Title"]</h1>
+    <h1 class="m-0 opacity-50">@ViewData["Title"]</h1>
     <img src="~/images/favicon.png"
          alt="Logo"
          style="height:60px; width:auto;"
@@ -14,17 +14,18 @@
 <form asp-action="Edit" method="post">
     <div class="mb-3">
         <label asp-for="Title" class="form-label"></label>
-        <input asp-for="Title" class="form-control" />
+        <input asp-for="Title" class="form-control font-monospace" />
         <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="Details" class="form-label"></label>
-        <input asp-for="Details" class="form-control" />
+        @* We use textarea for the TodoItem.Details so we can support multiple lines and pressing [Enter]. *@
+        <textarea asp-for="Details" class="form-control font-monospace" rows="10"></textarea>
         <span asp-validation-for="Details" class="text-danger"></span>
     </div>
     <div class="mb-3 form-check">
-        <input asp-for="IsDone" class="form-check-input" />
-        <label asp-for="IsDone" class="form-check-label"></label>
+        <input asp-for="IsDone" class="form-check-input checkbox-lg-create" />
+        <label asp-for="IsDone" class="form-check-label">Is it done?</label>
     </div>
     <div class="mb-3">
         <label asp-for="DueDate" class="form-label"></label>
@@ -42,7 +43,7 @@
     <div class="mb-3">
         <label class="form-label">@Html.DisplayNameFor(m => m.EntryDate)</label>
         <!-- form-control-plaintext is bootstrap’s way to render read-only data in form layout -->
-        <p class="form-control-plaintext">
+        <p class="form-control-plaintext text-lightblue-top">
             @Model.EntryDate?.ToString("dddd, MMMM dd yyyy")
         </p>
         <!-- We still need the value to post back to controller -->
