--- a/Views/TodoItems/Delete.cshtml
+++ b/Views/TodoItems/Delete.cshtml
@@ -5,10 +5,7 @@
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="m-0 opacity-50">@ViewData["Title"]</h1>
-    <img src="~/images/favicon.png"
-         alt="Logo"
-         style="height:60px; width:auto;"
-         asp-append-version="true" />
+    <img src="~/images/favicon.png" alt="Logo" style="height:48px; width:auto;" asp-append-version="true" />
 </div>
 
 <form asp-action="Delete" method="post">
